Update preload link for 3D model in default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=JetBrains+Mono&display=swap" rel="stylesheet">
-<link rel="preload" href="{{ '/Videos/3D_1.85MB.glb' | relative_url }}" as="fetch" type="model/gltf-binary" crossorigin>
+<link rel="preload" href="{{ '/Videos/On skull_3.16MB.glb' | relative_url }}" as="fetch" type="model/gltf-binary" crossorigin>
 <script src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script>
 <link rel="canonical" href="https://e-link.pages.dev/" />
  
