Enhance welcome message for mobile responsiveness
Updated welcome message to include line breaks for mobile view.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -429,9 +429,13 @@
 })();
 </script>
 
-    <div class="modal-title" style="margin-top: 15px;">
-      <span class="m-en">✨ Hi, Welcome to E-Link!</span>
-      <span class="m-zh">✨ 嗨！欢迎访问E-Link！</span>
+<div class="modal-title" style="margin-top: 15px;">
+      <span class="m-en">
+        ✨ Hi, Welcome to <br class="mobile-only-br"><span style="white-space: nowrap;">E-Link!</span>
+      </span>
+      <span class="m-zh">
+        ✨ 嗨！欢迎访问 <br class="mobile-only-br"><span style="white-space: nowrap;">E-Link！</span>
+      </span>
     </div>
 
     <div class="modal-body">
